cal project config

--- a/codeBet/page_4/DEA_calculator/main.html
+++ b/codeBet/page_4/DEA_calculator/main.html
@@ -5,23 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="ico.JPG">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>动植物分类所-webgl</title>
+    <title>动植物分类所-canvas</title>
     <script src="../../../p5.min.js"></script>
     <script src="functions.js"></script>
     <script src="outputText.js"></script>
     <script>
         var sc=1;
-
-        var rtx=0;
-        var rty=0;
-        var rtz=0;
-
-        var sx=0;
-        var sy=0;
-
         var T=0;
-
-        var isDown=false;
 
         function displayFunction(name){
             loop();
@@ -44,12 +34,6 @@
             }
         }
 
-        function outputFunction(){
-            var ifunction=document.querySelector(".inputFunction").value;
-            var cfunction=document.querySelector(".displayMode").value;
-            document.querySelector("#outputArea").innerHTML=output(ifunction,cfunction);
-        }
-
         function addSc(){
             sc*=2;
         }
@@ -60,33 +44,32 @@
             }
         }
 
+        function scrShot(){
+            save("acstudio"+(Math.random())+str(frameCount)+".png");
+        }
+
         function setup() {
-            createCanvas(windowWidth*0.8, windowHeight,WEBGL);
+            createCanvas(windowWidth*0.8, windowHeight);
             smooth();
             loadFunction();
         }
 
         function windowResized() {
-            resizeCanvas(windowWidth*0.8,windowHeight,WEBGL);
+            resizeCanvas(windowWidth*0.8,windowHeight);
         }
 
         function draw() {
             T=frameCount/20;
-
-            rotateX(rtx);
-            rotateY(rty);
-            rotateZ(rtz);
-
+            translate(width/2,height/2);
             scale(sc);
-
             background(0);
             noStroke();
             rectMode(CENTER);
             let zFunction=document.querySelector(".inputFunction").value;
             let cFunction=document.querySelector(".displayMode").value;
             try{
-                for(var x=-150;x<150;x+=10){
-                    for(var y=-150;y<150;y+=10){
+                for(var x=-300;x<300;x+=10){
+                    for(var y=-300;y<300;y+=10){
                         var z=eval(zFunction);
                         eval(cFunction);
                     }
@@ -103,24 +86,6 @@
                 }
             }
         }   
-
-        function mousePressed(){
-            if(mouseX>0){
-                sx=mouseX;
-                sy=mouseY;
-            }
-        }
-
-        function mouseDragged(){
-            if(mouseX>0){
-                rty=map(mouseX-sx,500,-500,-2*PI,0);
-                rotateY(rty);
-                rtx=map(mouseY-sy,500,-500,-2*PI,0);
-                rotateY(rtx);
-                return(false);
-            }
-        }
-
     </script>
     </head>
 
@@ -131,7 +96,7 @@
                 inputFunction:
             </summary>
             <div class="container icontainer">
-            <textarea class="inputFunction" onkeyup="outputFunction();" spellcheck="false">
+            <textarea class="inputFunction" spellcheck="false">
 sin(x*y*3+frameCount/20);
             </textarea>        
             </div>
@@ -141,7 +106,7 @@ sin(x*y*3+frameCount/20);
                 inputColorMode:
             </summary>
             <div class="container ccontainer">
-            <textarea class="displayMode" onkeyup="outputFunction();" spellcheck="false">
+            <textarea class="displayMode" spellcheck="false">
 noFill();
 stroke(255,x,y);
 strokeWeight(z);
@@ -165,10 +130,12 @@ circle(x,y,z*10);
     <div class="quitBox">
         <a href="../../../mainPage/mainPage_4.html">退出</a>
     </div>
+    <button class="abutton" onclick="scrShot()" id="scs">s</button>
     <button class="abutton" onclick="addSc()" id="add">+</button>
     <button class="abutton" onclick="subSc()" id="sub">-</button>
+
     <div class="output">
-        <details class="bottomDetails">
+        <details class="bottomDetails" open>
             <summary>
                 H5output
             </summary>
