--- a/codeBet/page_4/DEA_calculator/main.html
+++ b/codeBet/page_4/DEA_calculator/main.html
@@ -93,7 +93,7 @@
     <div class="panl">
         <details class="normalDetails" open>
             <summary>
-                inputFunction:
+                z=f(x,y)=?
             </summary>
             <div class="container icontainer">
             <textarea class="inputFunction" spellcheck="false">
@@ -103,7 +103,7 @@ sin(x*y*3+frameCount/20);
         </details>
         <details class="normalDetails" open>
             <summary>
-                inputColorMode:
+                对每个(x,y,z)点的操作:
             </summary>
             <div class="container ccontainer">
             <textarea class="displayMode" spellcheck="false">
@@ -116,7 +116,7 @@ circle(x,y,z*10);
         </details>
         <details class="normalDetails" open>
             <summary>
-                examplesList
+                范例列表:
             </summary>
             <div class="container bcontainer" id="btnContainer">
 
