--- a/codeBet/page_4/DEB_calculatorWebgl/main.html
+++ b/codeBet/page_4/DEB_calculatorWebgl/main.html
@@ -119,7 +119,7 @@
     <div class="panl">
         <details class="normalDetails" open>
             <summary>
-                inputFunction:
+                z=f(x,y)=?
             </summary>
             <div class="container icontainer">
             <textarea class="inputFunction" spellcheck="false">
@@ -129,7 +129,7 @@ sin((x+y)/50-T)
         </details>
         <details class="normalDetails" open>
             <summary>
-                inputColorMode:
+                对每个(x,y,z)点的操作:
             </summary>
             <div class="container ccontainer">
             <textarea class="displayMode" spellcheck="false">
@@ -147,7 +147,7 @@ pop();
         </details>
         <details class="normalDetails" open>
             <summary>
-                examplesList
+                范例列表:
             </summary>
             <div class="container bcontainer" id="btnContainer">
 
