--- a/codeBet/page_4/DEC_calculatorCsf/main.html
+++ b/codeBet/page_4/DEC_calculatorCsf/main.html
@@ -99,7 +99,7 @@
     <div class="panl">
         <details class="normalDetails" open>
             <summary>
-                inputFunctionX:
+                x=f(o)=?
             </summary>
             <div class="container ixcontainer">
             <textarea class="inputFunction" spellcheck="false">
@@ -109,7 +109,7 @@ sin(o)*200;
         </details>
         <details class="normalDetails" open>
             <summary>
-                inputFunctionY:
+                y=f(o)=?
             </summary>
             <div class="container iycontainer">
             <textarea class="inputFunction" spellcheck="false">
@@ -119,7 +119,7 @@ cos(2.2*o+T/3)*200;
         </details>
         <details class="normalDetails" open>
             <summary>
-                inputColorMode:
+                对每一个(x,y)点的操作:
             </summary>
             <div class="container ccontainer">
             <textarea class="displayMode" spellcheck="false">
@@ -132,7 +132,7 @@ line(x,y,px,py);
         </details>
         <details class="normalDetails" open>
             <summary>
-                examplesList
+                范例列表:
             </summary>
             <div class="container bcontainer" id="btnContainer">
 
