--- a/codeBet/page_4/DFA_MendelbrotSetFX/main.html
+++ b/codeBet/page_4/DFA_MendelbrotSetFX/main.html
@@ -136,6 +136,6 @@
             <p id="outputP"></p>
         </div>
     </div>
-    <a href="../../mainPage/mainPage_3.html">返回</a>
+    <a href="../../../mainPage/mainPage_4.html">返回</a>
     </body>
 </html>
