--- a/codeBet/page_4/DEE_calculator2dRender/main.html
+++ b/codeBet/page_4/DEE_calculator2dRender/main.html
@@ -70,6 +70,8 @@
             try{
                 if(x<width/2){
                     for(var y=-height/2;y<height/2;y+=1){
+                        var X=x/200;
+                        var Y=y/200;
                         var z=eval(zFunction);
                         eval(cFunction);
                     }
