--- a/mainPage/mainPage_4.html
+++ b/mainPage/mainPage_4.html
@@ -28,7 +28,8 @@
                 addComponents(4,"DEB_calculatorWebgl/main",3,"动分所-webGl","社区!社区!","P5.js");
                 addComponents(4,"DEC_calculatorCsf/main",3,"动分所-参数方程","社区!社区!","P5.js");
                 addComponents(4,"DED_calculator2dFunction/main",3,"一元函数操场","社区!社区!","P5.js");
-                addComponents(4,"DFA_MendelbrotSetFX/main",3,"复数分型操场","无限之于有限","P5.js");
+                addComponents(4,"DEE_calculator2dRender/main",3,"二元函数渲染器","大图导出","P5.js");
+                addComponents(4,"DFA_MendelbrotSetFX/main",3,"复数分型PG","everything flows","P5.js");
 
                 addPages(4,4);
 
