--- a/mainPage/mainPage_4.html
+++ b/mainPage/mainPage_4.html
@@ -24,6 +24,7 @@
                 addComponents(4,"DDB_simulateGravity2",3,"伪三体系统","跟随星+引力星","P5.js,the nature of code");
                 addComponents(4,"DDC_simulateGravity2",3,"双星伪三体","跟随星+引力星","P5.js,the nature of code");
                 addComponents(4,"DDD_simulateGravity2",3,"三体","3个引力星","P5.js,the nature of code");
+                addComponents(4,"DDE_simulateGravity3",3,"可交互的伪三体","2个引力星","P5.js,the nature of code");
                 addComponents(4,"DEA_calculator/main",3,"动分所-Canvas","社区!社区!","P5.js");
                 addComponents(4,"DEB_calculatorWebgl/main",3,"动分所-webGl","社区!社区!","P5.js");
                 addComponents(4,"DEC_calculatorCsf/main",3,"动分所-参数方程","社区!社区!","P5.js");
@@ -33,7 +34,7 @@
 
                 addPages(4,4);
 
-                scrollAnimate()
+                scrollAnimate();
 
             }
         </script>
