--- a/mainPage/mainPage_2.html
+++ b/mainPage/mainPage_2.html
@@ -41,7 +41,7 @@
 
                 addPages(4,2);
                 
-                scrollAnimate()
+                scrollAnimate();
 
             }
         </script>
