--- a/mainPage/mainPage_3.html
+++ b/mainPage/mainPage_3.html
@@ -41,7 +41,7 @@
 
                 addPages(4,3);
 
-                scrollAnimate()
+                scrollAnimate();
 
             }
         </script>
