--- a/mainPage/mainPage_4.html
+++ b/mainPage/mainPage_4.html
@@ -31,6 +31,7 @@
                 addComponents(4,"DED_calculator2dFunction/main",3,"一元函数操场","社区!社区!","P5.js");
                 addComponents(4,"DEE_calculator2dRender/main",3,"二元函数渲染器","大图导出","P5.js");
                 addComponents(4,"DFA_MendelbrotSetFX/main",3,"复数分型PG","everything flows","P5.js");
+                addComponents(4,"DGA_textDPl/main",3,"vCanvas库","p5->pjs","javaScript");
 
                 addPages(4,4);
 
