--- a/codeBet/page_4/DGA_textDPl/main.html
+++ b/codeBet/page_4/DGA_textDPl/main.html
@@ -15,7 +15,7 @@
         body{
             width: 100vw;
             height: 100vh;
-            background-color: rgb(0, 0, 0);
+            background-color: rgb(255, 255, 255);
             overflow:hidden;
         }
     </style>
@@ -26,26 +26,26 @@
 <script src="vtext.js"></script>
 <script>
     var vTextList=[];
-    for(var i=0;i<10;i++){
+    var xn=20,yn=16;
+    for(var i=0;i<xn;i++){
         vTextList.push([]);
     }
     setup(function(){
-        for(var i=0;i<10;i++){
-            for(var j=0;j<10;j++){
-                var x=map(i,0,10,0,width);
-                var y=map(j,0,10,0,height);
-                vTextList[i].push(new VText("vezzzing"[(i*10+j)%8],x,y,100,100,i*10+j,`color:rgb(${map(x,0,width,0,255)},${map(x,0,width,255,0)},${map(y,0,height,0,255)});`));
-                console.log(vTextList[i])
+        for(var i=0;i<xn;i++){
+            for(var j=0;j<yn;j++){
+                var x=map(i,0,xn,-100,width+100);
+                var y=map(j,0,yn,-100,height+100);
+                vTextList[i].push(new VText("vezzzing"[(i*xn+j)%8],x,y,100,100,`color:rgb(${map(x,0,width,0,255)},${map(x,0,width,255,0)},${map(y,0,height,0,255)});`));
             }
         }
     });
     draw(function(){
         for(var i=0;i<vTextList.length;i++){
             for(var j=0;j<vTextList[i].length;j++){
-                vTextList[i][j].scaleX(function(){
+                vTextList[i][j].vscaleX(function(){
                     return Math.sin(T/(i+1)/3)*2;
                 });
-                vTextList[i][j].scaleY(function(){
+                vTextList[i][j].vscaleY(function(){
                     return Math.cos(T/(j+1)/2)*2;
                 });
             }
