--- a/codeBet/page_3/CDA_3n1problem.html
+++ b/codeBet/page_3/CDA_3n1problem.html
@@ -31,13 +31,18 @@
             height: 100vh;
             right: 0;
             top: 0;
-            background-color: rgb(0, 0, 0);
+            background-color: rgba(0, 0, 0, 0.062);
             z-index: 99;
             padding-left: 20px;
             padding-top: 15px;
             padding-bottom: 15px;
             overflow: hidden;
             column-count: 3;
+            opacity: 0.2;
+            transition: 0.2s ease-in-out;
+        }
+        .rightPan:hover{
+            opacity: 1;
         }
         .rightPan .title{
             color: yellow;
@@ -63,7 +68,7 @@
             resizeCanvas(windowWidth,windowHeight);
         }
         function draw(){
-            background(0);
+            background(0,10);
             var currentNumber=frameCount+1;
             var preNumber=currentNumber;
             rp.innerHTML="";
@@ -76,9 +81,9 @@
                     currentNumber=currentNumber*3+1;
                 }
                 rp.innerHTML+="<p class=\"sub\">x="+i+"y="+currentNumber+"</p>";
-                stroke(sin(currentNumber/100)*120+120,sin(currentNumber/200)*120+120,200);
-                strokeWeight(1);
-                line(i-6,height-log(preNumber)*(height/18),i,height-log(currentNumber)*(height/18));
+                fill(sin(currentNumber/100)*120+120,sin(currentNumber/200)*120+120,200);
+                noStroke(1);
+                rect(i,currentNumber,6,3);
                 if(currentNumber==1){
                     break;
                 }
