--- a/mainPage/mainPage_4.html
+++ b/mainPage/mainPage_4.html
@@ -33,6 +33,7 @@
                 addComponents(4,"DFA_MendelbrotSetFX/main",3,"复数分型PG","everything flows","P5.js");
                 addComponents(4,"DGA_textDPl/main",3,"vCanvas库","p5->pjs","javaScript");
                 addComponents(4,"DHA_mmusic/main",3,"MMusic","webcam","p5.js");
+                addComponents(4,"DIA_JuliaSet",3,"juliaSet","CPU渲染","p5.js");
 
                 addPages(4,4);
 
